syntax = "proto3";

package skip.signer.signerservice;

option go_package = "github.com/cosmos/eureka-relayer/proto/gen/signer";

// SignerService provides transaction signing capabilities for multiple blockchain ecosystems.
service SignerService {
    // GetChains returns the list of chains the signer supports.
    rpc GetChains(GetChainsRequest) returns (GetChainsResponse) {}

    // GetWallet retrieves a wallet by its ID and returns the public key in the
    // format specified by pubkey_type.
    rpc GetWallet(GetWalletRequest) returns (GetWalletResponse) {}

    // GetWallets returns all available wallets.
    rpc GetWallets(GetWalletsRequest) returns (GetWalletsResponse) {}

    // Sign signs a transaction and returns the signature in the appropriate format.
    rpc Sign(SignRequest) returns (SignResponse) {}
}

message Chain {
    string name = 1;
    string chain_id = 2;
}

message GetChainsRequest {}
message GetChainsResponse {
    repeated Chain chains = 1;
}

message Wallet {
    string id = 1;
    string name = 2;
    repeated string tags = 3;

    // pubkey is the public key in the format specified by the request's pubkey_type.
    // See PubKeyType for format details.
    bytes pubkey = 4;

    bytes address_bytes = 5;
    string formatted_address = 6;
}

message GetWalletRequest {
    string id = 1;
    PubKeyType pubkey_type = 2;
}

// PubKeyType specifies the public key format for GetWallet responses.
enum PubKeyType {
    // Raw returns the key in its native format without transformation.
    Raw = 0;

    // Cosmos: 33-byte compressed secp256k1 (0x02/0x03 prefix || x).
    Cosmos = 1;

    // Ethereum: 65-byte uncompressed secp256k1 (0x04 || x || y).
    Ethereum = 2;

    // Solana: 32-byte Ed25519 public key.
    Solana = 3;
}

message GetWalletResponse {
    Wallet wallet = 1;
}

message GetWalletsRequest {}

message GetWalletsResponse {
    repeated Wallet wallets = 1;
}

// SignRequest contains the wallet ID and the transaction payload to sign.
// Exactly one payload type will be set.
message SignRequest {
    string wallet_id = 1;

    oneof payload {
        EvmTransaction evm_transaction = 2;
        CosmosTransaction cosmos_transaction = 3;
        RawMessage raw_message = 4;
        SolanaTransaction solana_transaction = 5;
    }
}

// SignResponse contains the signature matching the request's payload type.
message SignResponse {
    oneof signature {
        EvmTransactionSignature evm_signature = 1;
        CosmosTransactionSignature cosmos_signature = 2;
        RawMessageSignature raw_signature = 3;
        SolanaTransactionSignature solana_signature = 4;
    }
}

// EvmTransaction contains an EVM transaction to be signed.
message EvmTransaction {
    // chain_id is the EVM chain ID as a decimal string (e.g., "1", "8453").
    string chain_id = 1;

    // tx_bytes is an RLP-encoded unsigned EVM transaction (EIP-1559 type 2).
    // The signature is formed by computing the Keccak-256 hash of the RLP-encoded
    // transaction with Cancun signing rules, then signing with secp256k1.
    bytes tx_bytes = 2;
}

// EvmTransactionSignature contains the ECDSA signature components.
message EvmTransactionSignature {
    // r: 32 bytes, big-endian, zero-padded.
    bytes r = 1;

    // s: 32 bytes, big-endian, zero-padded.
    bytes s = 2;

    // v: 1 byte, recovery ID (0x00 or 0x01, not legacy 27/28).
    bytes v = 3;
}

// CosmosTransaction contains a Cosmos SDK transaction to be signed.
message CosmosTransaction {
    // sign_doc_bytes is the serialized SignDoc proto for SIGN_MODE_DIRECT.
    // The signature is formed by computing the SHA-256 hash of sign_doc_bytes,
    // then signing with secp256k1.
    bytes sign_doc_bytes = 2;
}

// CosmosTransactionSignature contains the signature for a Cosmos transaction.
message CosmosTransactionSignature {
    // signature: 64 bytes, raw secp256k1 ECDSA (r || s), no recovery byte.
    bytes signature = 1;
}

// RawMessage is used for signing arbitrary bytes.
message RawMessage {
    bytes message = 1;
}

// RawMessageSignature contains a signature for a raw message.
message RawMessageSignature {
    bytes signature = 1;
}

// SolanaTransaction contains a Solana transaction to be signed.
message SolanaTransaction {
    // transaction is a base64-encoded serialized Solana transaction.
    // The signature is formed by extracting the message bytes from the
    // decoded transaction and signing directly with Ed25519 (no hashing).
    string transaction = 1;
}

// SolanaTransactionSignature contains the signature for a Solana transaction.
message SolanaTransactionSignature {
    // signature: 64-byte Ed25519 signature.
    bytes signature = 1;
}
